# simple-fourier-transform

./: .gitignore  README.md  fft.py  main.py  pyproject.toml  requirements.txt
docs/: sparse_matrix_60%.npz  sparse_matrix_80%.npz  sparse_matrix_99.9%.npz
